# Hangman

./: ._hangman.pro  .gitignore  AsciiDisplay.cpp  AsciiDisplay.hpp  AsciiHangman.cpp  AsciiHangman.hpp  AsciiRenderer.cpp  AsciiRenderer.hpp  AsciiUi.cpp  AsciiUi.hpp  CMakeLists.txt  Exception.hpp  FileException.hpp  Game.cpp  Game.hpp  GameLogic.cpp  GameLogic.hpp  GameState.hpp  GameUi.hpp  Hangman.cpp  Hangman.hpp  KvpParser.cpp  KvpParser.hpp  Makefile  QtApplication.cpp  QtApplication.hpp  QtGameWindow.cpp  QtGameWindow.hpp  QtGuess.cpp  QtGuess.hpp  QtHangman.cpp  QtHangman.hpp  QtLetters.cpp  QtLetters.hpp  QtUi.cpp  QtUi.hpp  README.txt  StateRenderer.hpp  Strings.cpp  Strings.hpp  (+14 more)
alphabet/: Strings.cpp  Strings.hpp  alphabet  animali.txt  main.cpp
data/text/: languages.txt
data/text/English/: strings.txt
data/text/English/wordlists/: animals.txt  capital cities.txt  countries.txt  index.txt
data/text/Italiano/: strings.txt
data/text/Italiano/wordlists/: animali.txt  capitali.txt  index.txt  paesi.txt
data/text/Svenska/: strings.txt
data/text/Svenska/wordlists/: djur.txt  huvudstäder.txt  index.txt  länder.txt
data/text/english/: strings.txt
data/text/english/wordlists/: animals.txt  default.txt  index.txt  movies.txt
data/text/swedish/: strings.txt
data/text/swedish/wordlists/: animals.txt  default.txt  movies.txt
hangman.app/Contents/: Info.plist
hangmuz.app/Contents/: Info.plist
hangmuz.app/Contents/Frameworks/: libjpeg.9.dylib  liblzma.5.dylib  libmng.1.dylib  libpng15.15.dylib  libtiff.5.dylib
hangmuz.app/Contents/Frameworks/QtCore.framework/Versions/4/: QtCore
hangmuz.app/Contents/MacOS/: hangmuz
hangmuz.app/Contents/PlugIns/accessible/: libqtaccessiblewidgets.dylib
hangmuz.app/Contents/PlugIns/codecs/: libqcncodecs.dylib  libqjpcodecs.dylib  libqkrcodecs.dylib  libqtwcodecs.dylib
hangmuz.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib  libqjpeg.dylib  libqmng.dylib  libqtga.dylib  libqtiff.dylib
hangmuz.app/Contents/Resources/data/text/English/: strings.txt
hangmuz.app/Contents/Resources/data/text/Italiano/: strings.txt
src/: Exception.hpp  FileException.hpp  Game.cpp  Game.hpp  GameLogic.cpp  GameLogic.hpp  GameState.hpp  GameUi.hpp  Hangman.cpp  Hangman.hpp  KvpParser.cpp  KvpParser.hpp  Main.cpp  QtApplication.cpp  QtApplication.hpp  QtGameWindow.cpp  QtGameWindow.hpp  QtGuess.cpp  QtGuess.hpp  QtHangman.cpp  QtHangman.hpp  QtLetters.cpp  QtLetters.hpp  QtUi.cpp  QtUi.hpp  Strings.cpp  Strings.hpp  TextDisplay.cpp  TextDisplay.hpp  TextHangman.cpp  TextHangman.hpp  TextUi.cpp  TextUi.hpp  Utils.cpp  Utils.hpp
tools/: CMakeLists.txt
tools/alphabet/: CMakeLists.txt  Strings.cpp  main.cpp
vagrant/xenial64/: bootstrap.sh
vagrant_linux/: Vagrantfile  bootstrap.sh
wordlists/: animals.txt  films.txt
(+1 files in other folders)
